# mconf

./: LICENSE  pyproject.toml
.github/workflows/: python-publish.yml
examples/: config1.json  config2.json  converted.toml  demo.sh  env_default.env  env_merged.env  merged.json  overrides.toml  settings.yaml
src/blendconf/: cli.py
src/mconf/: __init__.py  cli.py
